--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-12-26 Tommaso Sacramone  <tommasosacramone.www@gmail.com>  
+  * Some minor improvements in HttpClient
+  * Release of restclient 1.1.3 in TER
+
 2015-11-27 Tommaso Sacramone  <tommasosacramone.www@gmail.com>  
   * Add optional feature initClient in function reset
   * Fix to integer the max_redirect field in configuration   
