--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2017-07-28 Tommaso Sacramone  <tommasosacramone.www@gmail.com>  
+  * Updated typo3 constrains to 8.7.99
+  * Release of restclient 2.0.3 in TER
+
 2017-04-24 Tommaso Sacramone  <tommasosacramone.www@gmail.com>  
   * Some small bugfix (Thanks to contributors: sebastian-seitz and to m3g4p0p)
   * Release of restclient 2.0.1 in TER
