--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2019-02-21 Tommaso Sacramone  <tommasosacramone.www@gmail.com>  
+  * Fix some deprecations for Typo3 9
+  * Release of restclient 2.0.4 in TER
+
 2017-07-28 Tommaso Sacramone  <tommasosacramone.www@gmail.com>  
   * Updated typo3 constrains to 8.7.99
   * Release of restclient 2.0.3 in TER
