--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
+2019-06-04 Tommaso Sacramone  <tommasosacramone.www@gmail.com>  
+  * Fix regression for Typo3 7
+  * Fix Changelog
+  * Fix Settings in documentation
+  * Release of restclient 2.0.6 in TER
+
 2019-03-13 Tommaso Sacramone  <tommasosacramone.www@gmail.com>  
   * Fix regression for Typo3 7
+  * Release of restclient 2.0.5 in TER
 
 2019-02-21 Tommaso Sacramone  <tommasosacramone.www@gmail.com>  
   * Fix some deprecations for Typo3 9
