--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2020-01-03 Tommaso Sacramone  <tommasosacramone.www@gmail.com>  
+  * Change vendor in namespace  
+  * Release of restclient 3.0.0 in TER
+
 2019-06-04 Tommaso Sacramone  <tommasosacramone.www@gmail.com>  
   * Fix regression for Typo3 7
   * Fix Changelog
